<?xml version="1.0"?>
<package format="2">
  <name>starmac</name>
  <version>0.0.0</version>
  <description>The starmac package</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Köse</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>hector_uav_msgs</depend>
  <exec_depend>message_generation</exec_depend>

  <export>

  </export>
</package>
